--- a/front-end/src/styles/main.css
+++ b/front-end/src/styles/main.css
@@ -34,7 +34,12 @@ body {
 
 .ui.grid {
   margin: 0 !important;
-  padding: 24px 5vw 50px 5vw !important;
+  padding: 24px 0 50px 0 !important;
+}
+
+.centered.grid {
+  padding: 24px !important;
+  justify-content: center !important;
 }
 
 .stop-scrolling {
@@ -59,7 +64,7 @@ a.search-icon {
 
 /* ! Column */
 .column {
-  padding: 28px !important;
+  padding: 28px ;
 }
 
 /* ! Segment */
@@ -83,17 +88,28 @@ hr {
   margin-bottom: 5px !important;
 }
 
-
 /* ! Text */
 /* Main sections */
-h4 {
-  margin-top: 4px; 
-  line-height: 24px !important; 
-  max-height: 26px !important; 
+
+.grey {
+  color: #5c5c5c
+}
+
+h5 {
+  margin-top: 8px !important;
+  font-family: 'airbnb_cereal_appbook' !important;
+  font-size: 18px !important;
+  font-weight: 100 !important;
   overflow: hidden !important; 
-  color: #343434 !important;
-  font-size: 16px !important;
-  font-family: 'airbnb_cereal_applight' !important;
+  color: black !important;
+}
+
+h4 {
+  margin-top: 8px !important;
+  font-family: 'airbnb_cereal_appbold' !important;
+  font-size: 32px !important;
+  overflow: hidden !important; 
+  color: black !important;
 }
 h3 {
   font-family: 'airbnb_cereal_appbook' !important;
@@ -108,6 +124,7 @@ h2 {
   color: rgb(255, 255, 255) !important;
   text-shadow: 1px 1px 2px rgb(0, 0, 0) !important;
 }
+
 
 @media (max-width: 400px) {  
   h2 {
@@ -310,6 +327,11 @@ body .black {
 }
 
 /* ! Navbar */
+.navbar-break {
+  position: relative;
+  top: 74px;
+  left: 0;
+}
 .navbar-item {
   height: 100%;
   padding: 8px;
@@ -319,6 +341,9 @@ body .black {
 }
 
 @media (max-width: 520px) {
+  .ui.card {
+    width: 100vw !important;
+  }
   .filters-bar {
     display: none !important;
   }
@@ -395,9 +420,7 @@ body .black {
   }
 
   .navbar-break {
-    position: relative !important;
-    top: 130px !important;
-    left: 0 !important;
+    top: 130px;
   }
 }
 
@@ -653,9 +676,19 @@ div.rs-slider-handle.active:before {
   border-bottom: 1px solid rgb(220, 220, 220);
 }
 
+.popup-header > h5 {
+  font-family: 'airbnb_cereal_appbold' !important;
+  font-weight: 900 !important;
+  font-size: 20px !important;
+  color: black;
+}
+
 .popup-title {
-  margin-left: 35px;
-  margin-bottom: 20px;
+  font-size: 18px !important;
+  font-family: 'airbnb_cereal_applight' !important;
+  text-align: center !important;
+  color: #5c5c5c !important;
+  padding: 0 30px 20px 30px !important;
 }
 
 .popup-form-container {
@@ -669,7 +702,7 @@ div.rs-slider-handle.active:before {
 
 .input-field {
   height: 56px !important;
-  width: 350px !important;
+  width: 350px;
 }
 
 .input-field > input {
@@ -853,7 +886,7 @@ select:-webkit-autofill:active {
       top: 74px !important;
       height: 74px !important;
       left: calc((100vw - 322px) / 2)  !important;
-      background: red !important;
+      background: transparent !important;
       width: 215px !important;
       transform: none !important;
       z-index: 100;
@@ -1075,6 +1108,7 @@ select:-webkit-autofill:active {
 
 .popup-window {
   width: 420px;
+  min-width: 322px !important;
   background-color: white !important;
   border-radius: 24px !important;
   z-index: 200 !important;
@@ -1083,16 +1117,25 @@ select:-webkit-autofill:active {
 @media (max-width:520px) {
   .popup-window {
     margin-top: -5px !important;
-    max-width: 420px;
-    min-width: 322px;
+    width: 95vw;
     background-color: white !important;
     border-radius: 24px !important;
     z-index: 200 !important;
   }
-  
   .popup-form-container {
+    min-width: 322px !important;
     width: 100%;
+    padding: 0 !important;
   }
+  .input-field {
+    min-width: 300px;
+    width: 80vw !important;
+  }
+
+  .coral-button {
+    width: 80vw !important;
+  }
+  
 }
 
 
@@ -1165,14 +1208,27 @@ select:-webkit-autofill:active {
   background-position: center;
 }
 
+.extra.content {
+  padding-top: 6px !important;
+}
+
 .min-300 {
   width: 300px !important
 }
 
 /* EXPERIENCES.JS */
+.ui.container {
+  margin: 0px !important;
+}
 
-#left-column {
-  padding: 0px 40px ;
+.column.left-column {
+  flex-grow: 1;
+  padding: 0px 24px !important;
+}
+
+.right-column {
+  flex-grow: 0.75;
+  padding: 0px !important;
 }
 
 .header-div {
@@ -1181,7 +1237,24 @@ select:-webkit-autofill:active {
 
 .experience-segment {
   display: flex;
-  padding: 20px;
+  padding: 20px 0px;
+}
+
+@media (max-width: 520px) {
+  .experience-segment {
+    flex-direction: column;
+  }
+  .right-content {
+    padding-top: 15px;
+    padding-left: 0px !important;
+  }
+  .experience-image {
+    width: 100% !important;
+  }
+  .heart {
+    margin-top: 10px !important;
+    margin-right: 12px !important;
+  }
 }
 
 .whole-segment {
@@ -1194,7 +1267,7 @@ select:-webkit-autofill:active {
 
 .experience-image {
   min-width: 200px !important;
-  width: 200px !important;
+  width: 200px;
   height: 250px;
   border: 1px solid rgb(219, 219, 219);
   border-radius: 12px;
@@ -1218,9 +1291,9 @@ select:-webkit-autofill:active {
 }
 
 .heart {
-  font-size: 25px !important;
+  font-size: 20px !important;
   position: absolute !important;
-  right: 0px;
+  right: 20px;
   color: rgb(197, 197, 197);
   cursor: pointer;
   right: 0px!;
@@ -1236,15 +1309,24 @@ select:-webkit-autofill:active {
 }
 
 .what-we-will-do {
-  font-weight: bold;
+  font-family: 'airbnb_cereal_appmedium';
+  white-space: nowrap;
+  width: 95px !important;
+  color: black;
+  padding-top: 10px;
+  margin-top: 10px;
+  border-top: 1px solid lightgrey;
 }
 
 .description {
+  font-family: 'airbnb_cereal_appbook';
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2; 
   -webkit-box-orient: vertical;
+  color: #5c5c5c !important;
+  font-size: 13px;
 }
 
 
@@ -1254,6 +1336,7 @@ select:-webkit-autofill:active {
 
 .reviews-and-price {
   display: flex;
+  align-items: flex-end;
   justify-content: space-between;
   padding-right: 0;
 }
@@ -1261,22 +1344,30 @@ select:-webkit-autofill:active {
 /* Start of Map box */
 
 .map {
-  position: fixed;
   width: 100%;
   height: 100vh;
-  /* background-image: url('https://traista.com/wp-content/uploads/2018/03/London-Google-map.png'); */
   background-size: no-repeat;
 } 
 
-@media (max-width: 650px) {
+@media (max-width: 1120px) {
   .map {
+    display: none !important;
+  }
+  .two.column.row {
+    width: 100% !important;
+  }
+  .column.left-column {
+    width: 100vw !important;
+    min-width: 250px !important;
+  }
+  .column.right-column {
     display: none !important;
   }
 }
 
  .map-container {
   position: fixed;
-  width: 900px;
+  width: 50% !important;
   height: 100vh;
 }
 
@@ -1362,7 +1453,7 @@ select:-webkit-autofill:active {
   margin-right: 250px;
   background-color: white;
   padding: 40px;
-  padding-top: 50px;
+  padding-top: 90px;
 }
 
 .submit-button {
